--- a/subPage4.html
+++ b/subPage4.html
@@ -2,14 +2,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Login / Sign Up Form</title>
+    <title>Success</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="./src/main.css">
 </head>
 <body>
     <div class="container">
-            <h1 class="form__title">Client request has been sent to XXX</h1>
-            <div onclick="login()" id="button"><a>Go to YYY</a></div>
+            <h1 class="form__title">Event successfully approved!</h1>
+            <div onclick="goTo('main')" id="button__wide"><a>Go to main page</a></div>
     </div>
     <script src="./src/main.js"></script>
 </body>
