--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Login / Sign Up Form</title>
+    <title>Login</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="./src/main.css">
 </head>
@@ -16,9 +16,9 @@
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Password">
+                <input type="password" id="password" class="form__input" autofocus placeholder="Password">
                 <div class="form__input-error-message"></div>
-                <div onclick="testfunction()" id="button"><a>Log In</a></div>
+                <div onclick="login()" id="button"><a>Log In</a></div>
             </div>
         </form>
     </div>
